Add uuid and middleware
